CATTY-346 Redesign Upload ViewController

--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="62e-MX-z1C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="62e-MX-z1C">
     <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -2077,78 +2077,9 @@
                     <view key="view" contentMode="scaleToFill" id="1yB-9i-wb8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bo1-dY-L01">
-                                <rect key="frame" x="26" y="10" width="323" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98z-rG-78H">
-                                <rect key="frame" x="26" y="81" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBB-2H-Mkv">
-                                <rect key="frame" x="88" y="81" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7N5-oV-GKQ">
-                                <rect key="frame" x="26" y="112" width="323" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oWZ-Ig-VdA">
-                                <rect key="frame" x="26" y="41" width="323" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="nff-Rv-TGY"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b2n-K8-vsP">
-                                <rect key="frame" x="26" y="143" width="323" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" priority="50" constant="100" id="9rp-UP-moZ"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="98z-rG-78H" firstAttribute="leading" secondItem="1yB-9i-wb8" secondAttribute="leadingMargin" constant="10" id="Aek-Zr-O37"/>
-                            <constraint firstItem="7N5-oV-GKQ" firstAttribute="leading" secondItem="1yB-9i-wb8" secondAttribute="leadingMargin" constant="10" id="Le0-eg-exx"/>
-                            <constraint firstItem="oWZ-Ig-VdA" firstAttribute="top" secondItem="bo1-dY-L01" secondAttribute="bottom" constant="10" id="MOA-06-DyB"/>
-                            <constraint firstItem="oWZ-Ig-VdA" firstAttribute="leading" secondItem="1yB-9i-wb8" secondAttribute="leadingMargin" constant="10" id="Ngn-Gs-YBc"/>
-                            <constraint firstItem="bo1-dY-L01" firstAttribute="top" secondItem="o7B-Ep-T23" secondAttribute="bottom" constant="10" id="RB4-Q6-aR2"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="b2n-K8-vsP" secondAttribute="trailing" constant="10" id="Sjw-gH-LpF"/>
-                            <constraint firstItem="bo1-dY-L01" firstAttribute="leading" secondItem="1yB-9i-wb8" secondAttribute="leadingMargin" constant="10" id="aaT-PT-bsb"/>
-                            <constraint firstItem="7N5-oV-GKQ" firstAttribute="top" secondItem="98z-rG-78H" secondAttribute="bottom" constant="10" id="inn-un-dCI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7N5-oV-GKQ" secondAttribute="trailing" constant="10" id="kt4-nI-Q69"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bo1-dY-L01" secondAttribute="trailing" constant="10" id="m56-za-qlg"/>
-                            <constraint firstItem="98z-rG-78H" firstAttribute="centerY" secondItem="SBB-2H-Mkv" secondAttribute="centerY" id="r9m-1K-zpS"/>
-                            <constraint firstItem="b2n-K8-vsP" firstAttribute="top" secondItem="7N5-oV-GKQ" secondAttribute="bottom" constant="10" id="rp8-SC-uHw"/>
-                            <constraint firstItem="b2n-K8-vsP" firstAttribute="leading" secondItem="1yB-9i-wb8" secondAttribute="leadingMargin" constant="10" id="uaJ-hI-qAf"/>
-                            <constraint firstItem="98z-rG-78H" firstAttribute="top" secondItem="oWZ-Ig-VdA" secondAttribute="bottom" constant="10" id="vqY-3H-5YY"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="oWZ-Ig-VdA" secondAttribute="trailing" constant="10" id="xtJ-nb-S2f"/>
-                            <constraint firstItem="SBB-2H-Mkv" firstAttribute="leading" secondItem="98z-rG-78H" secondAttribute="trailing" constant="20" id="zRW-Dj-t89"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Aw5-MM-L5u"/>
-                    <connections>
-                        <outlet property="descriptionLabel" destination="7N5-oV-GKQ" id="Yx9-Do-kGf"/>
-                        <outlet property="descriptionTextView" destination="b2n-K8-vsP" id="CWq-h5-97Z"/>
-                        <outlet property="projectNameLabel" destination="bo1-dY-L01" id="QNE-pa-dyL"/>
-                        <outlet property="projectNameTextField" destination="oWZ-Ig-VdA" id="FqW-9z-66I"/>
-                        <outlet property="sizeLabel" destination="98z-rG-78H" id="yQi-YO-wyh"/>
-                        <outlet property="sizeValueLabel" destination="SBB-2H-Mkv" id="s5O-CG-cUS"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HGk-3D-JT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
