--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -2082,10 +2082,32 @@
                         <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Aw5-MM-L5u"/>
+                    <connections>
+                        <segue destination="sdn-EX-8vC" kind="show" identifier="segueToSelectCategories" id="dRC-pj-6mh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HGk-3D-JT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-5378.3999999999996" y="-454.72263868065971"/>
+        </scene>
+        <!--Upload Category View Controller-->
+        <scene sceneID="Hg5-wp-s1g">
+            <objects>
+                <viewController id="sdn-EX-8vC" customClass="UploadCategoryViewController" customModule="Pocket_Code" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="j1A-3y-lCo"/>
+                        <viewControllerLayoutGuide type="bottom" id="wxy-d4-mTv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MXJ-e9-XuJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mac-q6-2AO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xE3-43-bCO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-5378" y="389"/>
         </scene>
         <!--Bluetooth PopupVC-->
         <scene sceneID="Zjh-xK-fOu">
