--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--New Project-->
+        <!--Project-->
         <scene sceneID="zhR-1R-Y6s">
             <objects>
                 <tableViewController storyboardIdentifier="ProjectTableViewController" id="BYa-g9-OiT" customClass="ProjectTableViewController" sceneMemberID="viewController">
@@ -218,7 +218,7 @@
                             <outlet property="delegate" destination="BYa-g9-OiT" id="tMB-vk-erl"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="New Project" id="mXA-lG-Ivg"/>
+                    <navigationItem key="navigationItem" title="Project" id="mXA-lG-Ivg"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -703,8 +703,6 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="s37-PF-3iN" kind="show" identifier="segueToProjects" id="d1c-M4-4gJ"/>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToNewProject" id="aum-BR-x1G"/>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="1kj-7D-Va7"/>
                         <segue destination="39D-hJ-FD1" kind="show" identifier="segueToExplore" id="7JT-6F-5d1"/>
                         <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="A6m-lh-qyH"/>
                         <segue destination="bYj-Ga-eye" kind="show" identifier="segueToUpload" id="d5M-d9-Nnc"/>
@@ -1150,10 +1148,6 @@
                     <navigationItem key="navigationItem" title="Projects" id="WNU-lr-3un"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToNewProject" id="Ynr-aF-UI3"/>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="9ao-Sd-kbH"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ysn-tw-Bdd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1509,7 +1503,6 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="scrollViewOutlet" destination="qwE-Ve-7jz" id="s6T-uY-bi7"/>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="mUB-CR-2KD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dmN-gD-N9f" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2257,6 +2250,5 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="5UD-6W-Ykq"/>
-        <segue reference="9ao-Sd-kbH"/>
     </inferredMetricsTieBreakers>
 </document>
