--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="62e-MX-z1C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="62e-MX-z1C">
     <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -246,13 +246,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="D7s-RZ-us6">
-                                            <rect key="frame" x="28" y="16" width="47" height="47"/>
+                                            <rect key="frame" x="28" y="14" width="51.5" height="51"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="D7s-RZ-us6" secondAttribute="height" multiplier="1:1" id="le9-y8-Wr7"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="12" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZSC-lf-PGR">
-                                            <rect key="frame" x="100" y="29" width="240" height="21.5"/>
+                                            <rect key="frame" x="104.5" y="29" width="235.5" height="21.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -260,11 +260,11 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ZSC-lf-PGR" firstAttribute="leading" secondItem="D7s-RZ-us6" secondAttribute="trailing" constant="25" id="4Aa-d7-XEw"/>
+                                        <constraint firstItem="D7s-RZ-us6" firstAttribute="centerY" secondItem="eau-Ip-BYX" secondAttribute="centerY" id="9MF-VM-SK3"/>
                                         <constraint firstItem="D7s-RZ-us6" firstAttribute="leading" secondItem="eau-Ip-BYX" secondAttribute="leadingMargin" constant="12" id="SS1-xb-qob"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="ZSC-lf-PGR" secondAttribute="trailing" id="Um4-8G-Mgv"/>
                                         <constraint firstItem="ZSC-lf-PGR" firstAttribute="centerY" secondItem="eau-Ip-BYX" secondAttribute="centerY" id="grd-Wz-MH8"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="D7s-RZ-us6" secondAttribute="bottom" constant="5" id="lxY-Xf-m45"/>
-                                        <constraint firstItem="D7s-RZ-us6" firstAttribute="top" secondItem="eau-Ip-BYX" secondAttribute="topMargin" constant="5" id="yjL-eB-VJh"/>
+                                        <constraint firstItem="D7s-RZ-us6" firstAttribute="height" secondItem="eau-Ip-BYX" secondAttribute="height" multiplier="0.65" id="suK-f3-Bad"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -2243,13 +2243,13 @@
             <point key="canvasLocation" x="253.125" y="-3990.8450704225347"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="O7z-Si-jt2"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="appsettings" width="21.333333969116211" height="21.333333969116211"/>
         <image name="micro" width="144.66667175292969" height="144.66667175292969"/>
         <image name="micro_active" width="144.66667175292969" height="144.66667175292969"/>
         <image name="top_charts" width="25.5" height="23"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="O7z-Si-jt2"/>
-    </inferredMetricsTieBreakers>
 </document>
