--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -29,7 +29,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="sXS-1D-zap">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="sXS-1D-zap" customClass="RoundedImageView" customModule="Pocket_Code" customModuleProvider="target">
                                             <rect key="frame" x="28" y="16" width="47" height="47"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="sXS-1D-zap" secondAttribute="height" multiplier="1:1" id="3aV-Q9-bTD"/>
@@ -558,7 +558,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="348" height="125"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kWN-vS-ZVh">
+                                        <imageView userInteractionEnabled="NO" tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kWN-vS-ZVh" customClass="RoundedImageView" customModule="Pocket_Code" customModuleProvider="target">
                                             <rect key="frame" x="31" y="41" width="43" height="43"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="RYh-0E-U5O"/>
@@ -957,7 +957,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="642-Kc-jVe">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="642-Kc-jVe" customClass="RoundedImageView" customModule="Pocket_Code" customModuleProvider="target">
                                             <rect key="frame" x="28" y="16" width="47" height="47"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="642-Kc-jVe" secondAttribute="height" multiplier="1:1" id="0aC-HZ-I7y"/>
@@ -1440,7 +1440,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="146"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49q-B8-MBG">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49q-B8-MBG" customClass="RoundedImageView" customModule="Pocket_Code" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="146"/>
                                         </imageView>
                                     </subviews>
@@ -1550,7 +1550,7 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCK-b7-9dt">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCK-b7-9dt" customClass="RoundedImageView" customModule="Pocket_Code" customModuleProvider="target">
                                                     <rect key="frame" x="27" y="16" width="47" height="47"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="mCK-b7-9dt" secondAttribute="height" multiplier="1:1" id="TNJ-xK-4Co"/>
@@ -2244,7 +2244,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="O7z-Si-jt2"/>
+        <segue reference="5UD-6W-Ykq"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="appsettings" width="21.333333969116211" height="21.333333969116211"/>
